# moodmap

./: Procfile  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
design/Components/: FloatingStars.tsx
design/pages/: MoodTracker.tsx
frontend/: .env  package-lock.json  package.json
frontend/src/: index.css
frontend/src/api/: client.ts
frontend/src/components/: EmotionButton.tsx  FlagButton.tsx  MapView.tsx
frontend/src/pages/: MapPage.tsx  SubmitPinPage.tsx
frontend/src/types/: database.ts
src/backend/: .env  main.py
src/qc/: checker.py
supabase/: schema.sql
