[project]
name = "moodmap-backend"
version = "0.1.0"
description = "MoodMap backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "supabase==2.3.4",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "textblob==0.17.1",
    "better-profanity==0.7.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
